--- a/Client/src/app/component/nav/nav.component.html
+++ b/Client/src/app/component/nav/nav.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="collapse navbar-collapse" id="navbarNav">
+    <div class="" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item">
                 <a class="nav-link btn" routerLink="/">HomePage</a>
