--- a/Client/src/app/component/pokemons/pokemons.component.html
+++ b/Client/src/app/component/pokemons/pokemons.component.html
@@ -1,1 +1,12 @@
-<p>pokemons works!</p>
+<div class="container d-flex justify-content-center pt-2">
+    <div class="card" style="width: 18rem;">
+        <div class="card-header">
+            <b>Pokemons</b>
+        </div>
+        <ul class="list-group list-group-flush">
+            @for (pokemon of pokemons; track pokemon.id) {
+            <li class="list-group-item"> {{pokemon.name}}</li>
+            }
+        </ul>
+    </div>
+</div>
