--- a/Client/src/app/component/trainers/trainers.component.html
+++ b/Client/src/app/component/trainers/trainers.component.html
@@ -5,7 +5,7 @@
         </div>
         <ul class="list-group list-group-flush">
             @for (trainer of trainers; track trainer.id) {
-            <li class="list-group-item"> {{trainer.name}}</li>
+            <li class="list-group-item btn" routerLink="/trainers/{{trainer.id}}"> {{trainer.name}}</li>
             }
         </ul>
     </div>
